--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "@apollo/client": "3.3.4",
+    "@jharrilim/use-rss": "0.1.4",
+    "graphql": "15.4.0",
+    "http": "^0.0.0",
+    "https": "^1.0.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "subscriptions-transport-ws": "0.9.18"
   },
   "scripts": {
     "start": "react-scripts start",
