--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "3.3.4",
-    "@jharrilim/use-rss": "0.1.4",
+    "date-fns": "^2.16.1",
     "graphql": "15.4.0",
-    "http": "^0.0.0",
-    "https": "^1.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "socket.io-client": "^3.0.4",
     "subscriptions-transport-ws": "0.9.18"
   },
   "scripts": {
