--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "graphql": "15.4.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-router-dom": "^5.2.0",
     "socket.io-client": "^3.0.4",
-    "subscriptions-transport-ws": "0.9.18"
+    "subscriptions-transport-ws": "0.9.18",
+    "swr": "^0.3.9"
   },
   "scripts": {
     "start": "react-scripts start",
