--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "3.3.4",
+    "@apollo/client": "^3.3.6",
     "date-fns": "^2.16.1",
     "framer-motion": "^2.9.5",
-    "graphql": "15.4.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "graphql": "^15.4.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-intersection-observer": "^8.31.0",
     "react-router-dom": "^5.2.0",
-    "socket.io-client": "^3.0.4",
-    "subscriptions-transport-ws": "0.9.18",
+    "subscriptions-transport-ws": "^0.9.18",
     "swr": "^0.3.9"
   },
   "scripts": {
