--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.6",
     "date-fns": "^2.16.1",
+    "firebase": "^8.2.0",
     "framer-motion": "^2.9.5",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
